--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,28 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A React TypeScript to-do list app by Dmytro Radchenko, featuring task management, Firebase authentication, and a Bootstrap-based interface."
     />
+    <meta
+      name="keywords"
+      content="to-do list app, HTML, CSS,  React TypeScript, task management, Firebase authentication, Bootstrap, Tailwind, Dmytro Radchenko Portfolio, productivity app"
+    />
+    <meta name="author" content="Dmytro Radchenko" />
+    <meta property="og:title" content="Dmytro Radchenko's To-Do List App" />
+    <meta
+      property="og:description"
+      content="Explore Dmytro Radchenko's React TypeScript to-do list app. It integrates Firebase for seamless task management and authentication."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/social-image.png" />
+    <meta property="og:url" content="https://your-app-url.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dmytro Radchenko's To-Do List App" />
+    <meta
+      name="twitter:description"
+      content="Discover a feature-rich React TypeScript to-do list app by Dmytro Radchenko."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/social-image.png" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Dmytro Radchenko Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
